Adding Persistence manager to project * Only Querying the DB once - on App onload

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -91,11 +91,23 @@ date.format=yyyy-MM-dd
 # db=postgres://user:pwd@host/database
 #
 # If you need a full JDBC configuration use the following :
-db.default.url=jdbc:mysql://localhost:3306/lessons?useUnicode=true&characterEncoding=UTF-8
+##########################################
+###########    Local DB ##################
+##########################################
+//db.default.url=jdbc:mysql://localhost:3306/lessons?useUnicode=true&characterEncoding=UTF-8
+//db.default.driver=com.mysql.jdbc.Driver
+//db.default.user=root
+//db.default.pass=123456
+
+##########################################
+###########    AMZAON DB #################
+##########################################
+db.default.url=jdbc:mysql://toradb.chjdbwlzo4nc.us-west-2.rds.amazonaws.com/lessons?useUnicode=true&characterEncoding=UTF-8
 db.default.driver=com.mysql.jdbc.Driver
-db.default.user=root
-db.default.pass=123456
-#
+db.default.user=razrog
+db.default.pass=1qaz!QAZ
+
+
 # Connections pool configuration :
 # db.default.pool.timeout=1000
 # db.default.pool.maxSize=30
