--- a/conf/application.conf
+++ b/conf/application.conf
@@ -94,18 +94,18 @@ date.format=yyyy-MM-dd
 ##########################################
 ###########    Local DB ##################
 ##########################################
-db.default.url=jdbc:mysql://localhost:3306/lessons?useUnicode=true&characterEncoding=UTF-8
-db.default.driver=com.mysql.jdbc.Driver
-db.default.user=root
-db.default.pass=123456
+#db.default.url=jdbc:mysql://localhost:3306/lessons?useUnicode=true&characterEncoding=UTF-8
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.user=root
+#db.default.pass=123456
 
 ##########################################
 ###########    AMZAON DB #################
 ##########################################
-//db.default.url=jdbc:mysql://toradb.chjdbwlzo4nc.us-west-2.rds.amazonaws.com/lessons?useUnicode=true&characterEncoding=UTF-8
-//db.default.driver=com.mysql.jdbc.Driver
-//db.default.user=razrog
-//db.default.pass=1qaz!QAZ
+db.default.url=jdbc:mysql://toradb.chjdbwlzo4nc.us-west-2.rds.amazonaws.com/lessons?useUnicode=true&characterEncoding=UTF-8
+db.default.driver=com.mysql.jdbc.Driver
+db.default.user=razrog
+db.default.pass=1qaz!QAZ
 
 
 # Connections pool configuration :
