--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,7 +29,8 @@ date.format=yyyy-MM-dd
 # Server configuration
 # ~~~~~
 # If you need to change the HTTP port, uncomment this (default is set to 9000)
-# http.port=9000
+http.port=80
+%raz.http.port=9000
 #
 # By default the server listen for HTTP on the wildcard address.
 # You can restrict this.
@@ -94,10 +95,10 @@ date.format=yyyy-MM-dd
 ##########################################
 ###########    Local DB ##################
 ##########################################
-#db.default.url=jdbc:mysql://localhost:3306/lessons?useUnicode=true&characterEncoding=UTF-8
-#db.default.driver=com.mysql.jdbc.Driver
-#db.default.user=root
-#db.default.pass=123456
+%raz.db.default.url=jdbc:mysql://localhost:3306/lessons?useUnicode=true&characterEncoding=UTF-8
+%raz.db.default.driver=com.mysql.jdbc.Driver
+%raz.db.default.user=root
+%raz.db.default.pass=123456
 
 ##########################################
 ###########    AMZAON DB #################
