Going back to original DB - Updated application.conf - Updated PersistanceManager

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -95,18 +95,18 @@ http.port=80
 ##########################################
 ###########    Local DB ##################
 ##########################################
-//%raz.db.default.url=jdbc:mysql://localhost:3306/lessons?useUnicode=true&characterEncoding=UTF-8
-//%raz.db.default.driver=com.mysql.jdbc.Driver
-//%raz.db.default.user=root
-//%raz.db.default.pass=123456
+%raz.db.default.url=jdbc:mysql://localhost:3306/lessons?useUnicode=true&characterEncoding=UTF-8
+%raz.db.default.driver=com.mysql.jdbc.Driver
+%raz.db.default.user=root
+%raz.db.default.pass=123456
 
 ##########################################
 ###########    AMZAON DB #################
 ##########################################
-//db.default.url=jdbc:mysql://toradb.chjdbwlzo4nc.us-west-2.rds.amazonaws.com/lessons?useUnicode=true&characterEncoding=UTF-8
-//db.default.driver=com.mysql.jdbc.Driver
-//db.default.user=razrog
-//db.default.pass=1qaz!QAZ
+db.default.url=jdbc:mysql://toradb.chjdbwlzo4nc.us-west-2.rds.amazonaws.com/lessons?useUnicode=true&characterEncoding=UTF-8
+db.default.driver=com.mysql.jdbc.Driver
+db.default.user=razrog
+db.default.pass=1qaz!QAZ
 
 
 # Connections pool configuration :
